// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionItem /> renders bordered 1`] = `
<div
  className="f19xhczu"
>
  <button
    aria-controls="accordion-body-.0"
    aria-selected={false}
    className="fvh4ls9"
    id="accordion-title-.0"
    onClick={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="f1qo33y1"
    >
      Title
    </span>
    <IconChevronRight
      decorative={true}
      size={24}
    />
  </button>
  <section
    aria-hidden={true}
    aria-labelledby="accordion-title-.0"
    className="f1vx78kv"
    id="accordion-body-.0"
    role="tabpanel"
  />
</div>
`;

exports[`<AccordionItem /> renders expanded 1`] = `
<div
  className="f1x7wej8"
>
  <button
    aria-controls="accordion-body-.0"
    aria-selected={true}
    className="fvh4ls9"
    id="accordion-title-.0"
    onClick={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="f1qo33y1"
    >
      Title
    </span>
    <IconChevronDown
      decorative={true}
      size={24}
    />
  </button>
  <section
    aria-hidden={false}
    aria-labelledby="accordion-title-.0"
    className="fk0ojd8"
    id="accordion-body-.0"
    role="tabpanel"
  />
</div>
`;
